Organize images folder

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 
 				<div class="logo">
 					<a href="#">
-						<img src="logo.jpg" alt="Khan Academy Logo">
+						<img src="images/logo.jpg" alt="Khan Academy Logo">
 					</a>
 				</div>
 
@@ -59,7 +59,7 @@
 
 	<main class="container">
 		<section class="main__img">
-			<img src="kids.jpg" alt="Kids studying and using computers">
+			<img src="images/kids.jpg" alt="Kids studying and using computers">
 		</section>
 
 		<section>
