Add dropdown arrow to "Courses" menu

--- a/index.html
+++ b/index.html
@@ -26,7 +26,10 @@
 		<header class="container">
 			<nav>
 				<div class="left-nav">
-					<a href="#">Courses</a>
+					<div>
+						<a href="#">Courses</a>
+						<select name="" id=""></select>
+					</div>
 
 					<form class="fontuser" action="">
 						<input placeholder="Search" type="text" name="search" id="search">
